# Project-Avatar

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  BLOCKERS_AND_USER_ACTION_ITEMS.md  CHANGELOG.md  Dockerfile  PAYLOAD_INTERFACE.md  PHASE_0_5_COMPLETION.md  README.md  W2A_FINAL_STATUS.md  W2A_STATUS.md  WAVE_0_HANDOFF.md  changes-made.md  docker-compose.yml  hermes_conversation_20260413_124629.json  pyproject.toml
.claude/: CLAUDE.md  ralph-loop.COMPLETED.md  ralph-loop.local.md  ralph-progress-phase0.5-complete.md  ralph-progress.local.md  settings.json
.claude/commands/: abort.md  drone-status.md  fly.md  preflight.md
.claude/hooks/: post_tool_use.py  pre_tool_use.py  safety_gate.sh
.claude/memory/: MEMORY.md
.claude/tasks/: TASKS_INDEX.md  wave-1-tasks.md  wave-2-tasks.md  wave-3-tasks.md  wave-4-tasks.md  wave-5-tasks.md  wave-6-tasks.md
.github/scripts/: collect-artifacts.sh  pin-digests.py
.github/workflows/: ci.yml  nightly-rich.yml  pr-fast.yml  release.yml
.hypothesis/constants/: 1db9adfabfd72b93  1ec77ac308e2c91a  2a3a9d5c6203f064  3db5dc0728f1d45b  425a50eb87cf06e1  43a4e29c1310a0d9  50f009ed0fc72b0e  5363e7b36dde8532  57bd2121ff8fdc7b  65110c68be64b380  730f97dc4c355d0c  77a1174f8d93c3c8  7ba8bc4705a50823  7bef2d88a2d917c5  a518cf65094250b0  aca4f9262ef04b04  c4cb1be95851f548  dbdb588dd3cdaae6  dcc5a1b65cb9d8f6  ea57eff2b4c2c6f9  eed936cba2de1d60  f93e5ead1f33dcb6
archive/px4-mavsdk-python-evaluation/: .bandit.yaml  .pre-commit-config.yaml  pyproject.toml
avatar/: __init__.py
avatar/config/: __init__.py  profiles.py  sitl.yaml
avatar/core/: __init__.py  context_managers.py  decorators.py
avatar/mav/: __init__.py  connection.py  connection_manager.py  escalation_matrix.py  guardian.py  guardian_async.py  heartbeat_service.py  offboard_streamer.py  protocols.py  px4_parameters.py  resource_monitor.py  state_machine.py  telemetry_cache.py
avatar/mcp_server/: __init__.py  __main__.py  compat.py  confirmation.py  confirmation_policy.py  protocols.py  server.py
avatar/mission_intel/: area_analyzer.py  config.py  intent_planner.py  safety_checks.py  scenic_sweep.py
avatar/scripts/: demo_script.md
avatar/sim/: __init__.py  runner.py  scenarios.py
avatar/tests/: conftest.py  test_mcp_tools.py  test_safety_scenarios.py  test_sitl_basic.py  test_vision_pipeline.py
avatar/utils/: __init__.py  flight_recorder.py
avatar/vision/: __init__.py  errors.py  gazebo_camera_client.py  mock_detector.py  providers.py  state_string.py
docker/: compose.yaml
docker/shared/: wait-for-px4.py
docker/sim-gazebo/: xvfb-wrapper.sh
docker/sim-sih/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  PAYLOAD_INTERFACE.md  PHASE_0_5_SUMMARY.md  TELEMETRY_AND_NETWORKING.md  sitl_setup.md
docs/analysis/: flight_tools_gaps.md  mcp_standards_audit.md  safety_architecture_gaps.md  state_machine_gaps.md
docs/research/: Arch-research.md  MASTER_BRIEFING.md
docs/runbooks/: field-kit.md  first-flight.md  preflight.md
esp32/avatar_bridge/: avatar_bridge.ino
hardware/pi/: bring-up.sh
hardware/px4/: __init__.py  flash-px4.sh
hermes/: 01-opensource-px4-llm-landscape.md  02-arxiv-llm-uav-research.md  03-gazebo-macos-sitl-viability.md  04-mavsdk-offboard-best-practices.md  05-yolov8-rpi4-benchmarks.md  FEEDBACK_GUIDE.md  README.md
hermes/analysis/: ANALYSIS_TEMPLATE.md  README.md
hermes/discovery/: 2026-04-28.md  2026-05-02.md
hermes/dream/: 2026-05-02.md
hermes/nightly/: 2026-04-13-research.md  2026-04-28-research.md  2026-05-02-research.md  2026-05-04-research.md  FEEDBACK_TEMPLATE.md
pwa/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
pwa/src/: App.tsx  index.css
research/: DECISIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  cinema.md
research/01-core-project/: PHASE_0_5_FULL_SITL_PLAN.md  project_avatar_prd.md  project_avatar_roadmap.md  project_avatar_technical.md
research/03-software-architecture/: AGENT_CONNECTION_QUICKSTART.md  mcp_agent_agnostic_design.md
research/05-testing-validation/: calibration_procedures.md
research/08-marketplace-hunting/: 02-thrust-calculator.md
scripts/: demo_acrobatics.py  demo_cinematic_shots.py  demo_tracking.py  run-scenario.sh  sim.sh  test-sih-smoke.sh  trivial-flash.sh  validate_mcp_server.py
sim/: README.md  example_mission.json  launch.sh  mavlink_control.py  sim_validation.py
sim/params/: sitl_quad.parm
splash/: test_integration.py
splash/control/: README.md  mavlink_bridge.py  mcp_server.py  requirements.txt  state_machine.py  telemetry_ws_server.py
splash/cv/: README.md  __init__.py  detector.py  main.py  requirements.txt  targeting.py  test_cv.py  tracker.py
splash/payload/: __init__.py  base_payload.py  payload_registry.py  splash_payload.py  test_payload_interface.py
tests/: __init__.py  conftest.py  test_avatar_entrypoint.py  test_cinematic_shots.py  test_connection_legacy_module_removed.py  test_mcp_tools.py  test_protocols.py  test_pytest_collects_only_tests_package.py  test_safety_scenarios.py  test_sitl_basic.py  test_tracking_tools.py  test_validate_mcp_server_tool_count.py  test_vision_pipeline.py
tests/config/: test_profiles.py  test_profiles_v2.py
tests/core/: __init__.py  conftest.py  test_context_managers.py  test_decorators.py
tests/e2e/: __init__.py  conftest.py  test_failsafes.py  test_full_mission.py  test_mcp_realtime_control.py  test_mcp_sitl_smoke.py  test_performance.py  test_scenario_indoor_obstacles.py  test_scenario_runner_follow.py  test_scenario_sailboat_follow.py
tests/hitl/: conftest.py  test_hitl_failsafes.py  test_hitl_preflight.py  test_hitl_scenarios.py
tests/mav/: __init__.py  test_connection_manager.py  test_escalation_matrix.py  test_escalation_matrix_dispatch.py  test_guardian_async.py  test_guardian_async_failsafe_actions.py  test_heartbeat_service.py  test_offboard_owner.py  test_offboard_streamer.py  test_px4_parameters.py  test_resource_monitor.py  test_state_machine.py  test_telemetry_cache.py
tests/mcp_server/: test_backward_compat.py  (+5 more)
web/: app.js  index.html  styles.css
(+336 files in other folders)
