[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-control-system"
version = "1.0.0"
description = "Safety-critical drone control software"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Drone Safety Team", email = "safety@drone-project.example"}
]
keywords = ["drone", "uav", "safety-critical", "flight-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "asyncio-mqtt>=0.13.0",
    "structlog>=23.0.0",
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "orjson>=3.9.0",
    "python-dateutil>=2.8.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    # Phase 0.5 dependencies
    "mavsdk>=1.4.0",           # PX4 drone communication
    "mcp>=1.0.0",              # MCP SDK for agent interface
    "ultralytics>=8.0.0",      # YOLO vision
    "opencv-python>=4.8.0",    # Computer vision
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "factory-boy>=3.3.0",
    "respx>=0.20.0",
    "pytest-mock>=3.11.0",
    "anyio>=3.7.0",
    # Static Analysis
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
    # Type Stubs
    "types-python-dateutil",
    "types-requests",
    "types-pyyaml",
    # Code Quality
    "pre-commit>=3.3.0",
    "ruff>=0.0.285",
    "isort>=5.12.0",
    "black>=23.7.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
avatar = "avatar.main:main"

# ============================================================================
# HATCHLING BUILD CONFIGURATION
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["avatar"]

[tool.hatch.build.targets.sdist]
include = ["avatar", "README.md", "pyproject.toml"]

[project.urls]
Homepage = "https://github.com/drone-project/control-system"
Documentation = "https://docs.drone-project.example"
Repository = "https://github.com/drone-project/control-system"
Issues = "https://github.com/drone-project/control-system/issues"

# ============================================================================
# MYPY CONFIGURATION - Strict Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
extra_checks = true

# Show error context and statistics
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true

# Per-module overrides for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "PIL.*",
    "mavsdk.*",
    "mavsdk.offboard.*",
    "mcp.*",
    "mcp.server.*",
    "mcp.server.lowlevel.*",
    "mcp.server.models.*",
    "mcp.types.*",
    "psutil.*",
]
ignore_missing_imports = true
follow_untyped_imports = true
# Allow untyped calls and missing attributes in third-party libraries
# These libraries don't have complete type stubs
disable_error_code = ["attr-defined", "no-untyped-call", "no-any-return"]

# Per-file overrides for mavsdk-heavy files - mavsdk has no type stubs
[[tool.mypy.overrides]]
module = [
    "avatar.mav.connection_manager",
    "avatar.mav.connection_config",
    "avatar.mav.px4_parameters",
    "avatar.mcp_server.tools.flight_tools",
    "avatar.mav.guardian_async",
    "avatar.mav.resource_monitor",
    "avatar.core.context_managers",
    "avatar.mcp_server.tools.telemetry_tools",
    "avatar.vision.gazebo_camera_client",
    "avatar.vision.mock_detector",
    "avatar.mcp_server.tools.vision_tools",
]
disable_error_code = ["attr-defined", "no-untyped-call", "comparison-overlap", "unused-ignore", "import-untyped"]

# Per-file overrides for test files - disable strict typing for tests
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["attr-defined", "no-untyped-call", "no-any-return", "import-untyped", "misc", "no-untyped-def", "unreachable"]

# ============================================================================
# PYLINT CONFIGURATION - Safety-Focused Analysis
# ============================================================================
[tool.pylint.main]
py-version = "3.12"
ignore-patterns = ["^\\."]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.mccabe",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.typing",
]

[tool.pylint.messages_control]
disable = [
    # Allow these for pragmatic reasons
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    # Safety-critical: we prefer explicit over implicit
    "protected-access",  # Allow for testing internals
]

enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1000
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "e", "ex", "id", "T", "K", "V", "_", "logger"]
good-names-rgxs = ["^_[a-z_]+$", "^test_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 11
max-statements = 60
min-public-methods = 1

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.logging]
logging-modules = ["logging", "structlog"]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO", "HACK", "BUG", "SAFETY", "REVIEW"]

[tool.pylint.refactoring]
max-nested-blocks = 4

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-imports = true
ignore-docstrings = true
ignore-signatures = true

[tool.pylint.typecheck]
generated-members = ["numpy.*", "scipy.*", "torch.*"]

[tool.pylint.variables]
dummy-variables-rgx = "_|dummy|unused|.*_unused|mock_.*|stub_.*"
callbacks = ["cb_", "callback", "on_", "handle_"]

[tool.pylint.imports]
allow-wildcard-with-all = true

# ============================================================================
# BANDIT CONFIGURATION - Security Scanning
# ============================================================================
# See .bandit.yaml for detailed configuration

[tool.bandit]
tests = ["B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B310", "B311",
         "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321",
         "B323", "B324", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408",
         "B409", "B410", "B411", "B412", "B413"]
skips = []
exclude_dirs = ["tests", "venv", ".venv", "__pycache__", "build", "dist"]

# ============================================================================
# PYTEST CONFIGURATION - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--capture=no",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "property: marks tests as property-based tests",
    "safety_critical: marks safety-critical tests",
    "hardware_in_loop: marks tests requiring hardware",
    "sitl: marks tests that require PX4 SITL and --run-sitl",
]
asyncio_mode = "auto"
timeout = 300  # 5 minutes max per test
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning:uvloop.*",
    "ignore::DeprecationWarning:mavsdk.*",
    "ignore::DeprecationWarning:asyncio.*",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["avatar"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
# Safety-critical modules require 95% coverage
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "except ImportError:",
    "pass  # coverage: ignore",
    "logger\\.debug",
    "logger\\.trace",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# ISORT CONFIGURATION - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/.venv/*", "*/__pycache__/*"]
known_future_library = ["__future__"]
known_standard_library = ["typing", "collections", "contextlib", "dataclasses", "enum", "pathlib"]
known_third_party = ["numpy", "scipy", "pydantic", "pytest", "hypothesis", "structlog"]
known_first_party = ["avatar"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
import_headings = [
    "Future imports",
    "Standard library",
    "Third-party",
    "First-party",
    "Local",
]
force_sort_within_sections = true
order_by_type = false

# ============================================================================
# BLACK CONFIGURATION - Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = false
preview = false

# ============================================================================
# RUFF CONFIGURATION - Fast Python Linter
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",  # Use of assert (we use assert for internal invariants)
    "S311",  # Standard pseudo-random generators (allowed for non-crypto)
    "E501",  # Line too long (handled by black)
    "TCH003", # Typing-only import (handled by mypy)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "ARG"]
"conftest.py" = ["S"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 100

[tool.ruff.mccabe]
max-complexity = 12

# ============================================================================
# HYPOTHESIS CONFIGURATION - Property-Based Testing
# ============================================================================
[tool.hypothesis]
# Maximum number of examples to generate per test
max_examples = 100
# Deadline for individual test executions (ms)
deadline = 500
# Whether to report slowest examples
print_blob = true
# Derandomize for CI stability
derandomize = false
# Phase execution order
phases = ["explicit", "reuse", "generate", "target", "shrink", "explain"]
# Database for example storage
database_file = ".hypothesis/examples"
# Verbosity level
verbosity = "normal"

# State machine configuration
[tool.hypothesis.stateful]
# Maximum number of rules to run in a single test case
max_examples = 50
# Maximum number of steps in a single test case
stateful_step_count = 100
# Whether to run preconditions before executing a rule
precondition_check_interval = 32
